--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <title>UNITY</title>
 
+<a href="Breakoid/index.html">
+    <img src="Breakoid/IMG_1707.png" alt="Breakoid" class="game-image">
+</a>
